dodan login in par popravkov

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>INDEX</h1>
-        <a href="/blackjack"> - - BLACKJACK - - </a>
-        <a href="/roleta"> - - ROLETA - - </a>
-        <a href="/slots"> - - SLOTS - - </a>
-        <a href="/horseraces"> - - HORSE RACES - - </a>
+        <a href="/blackjack"> - - BLACKJACK - - </a><br>
+        <a href="/roleta"> - - ROLETA - - </a><br>
+        <a href="/slots"> - - SLOTS - - </a><br>
+        <a href="/horseraces"> - - HORSE RACES - - </a><br>
 </body>
 </html>
