--- a/templates/slots.html
+++ b/templates/slots.html
@@ -10,7 +10,9 @@
 
     <h1>SLOTS</h1>
     <button id="spinButton">Spin</button>
-    <p id="numbers"></p>
+    <img id="img1" src="/static/images/slots/apple.jpg" alt="Slot 1" width="100" height="100">
+    <img id="img2" src="/static/images/slots/banana.jpg" alt="Slot 2" width="100" height="100">
+    <img id="img3" src="/static/images/slots/bell.jpg" alt="Slot 3" width="100" height="100">
     <p id="result"></p>
     <p id="prize"></p>
     
@@ -28,6 +30,11 @@
                         $("#numbers").text("Numbers: " + response.numbers.join(" "));
                         $("#result").text(response.result);
                         $("#prize").text("Prize: " + response.prize + "€");
+                        
+
+                        $("#img1").attr("src", response.numbers[0]);
+                        $("#img2").attr("src", response.numbers[1]);
+                        $("#img3").attr("src", response.numbers[2]);
                         
                     },
                     error: function(error) {
