--- a/templates/kazalo.html
+++ b/templates/kazalo.html
@@ -12,6 +12,7 @@
     <a href="/roleta"> - - ROLETA - - </a><br>
     <a href="/slots"> - - SLOTS - - </a><br>
     <a href="/horseraces"> - - HORSE RACES - - </a><br>
+    <a href="/upperlower"> - - UPPERLOWER - - </a><br>
     <b>{{ session.username }}</b>! <button onclick="logout()">Odjava</button></p>
 </body>
 
