--- a/templates/roleta.html
+++ b/templates/roleta.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>ROLETA</h1>
-
+    <img id="img1" src="/static/images/roleta/roleta.jpg" alt="Slot 1" width="500" height="500"><br>
     <label for="choice">Choose your bet:</label>
     <select id="choice">
         <option value="0">Number (0-36)</option>
@@ -26,7 +26,6 @@
         <option value="secondtol">Second Column (2,5,8,...)</option>
         <option value="thirdtol">Third Column (3,6,9,...)</option>
     </select>
-
     <button id="spinButton">Spin the Wheel</button>
 
     <p id="userChoice"></p>
