login za taprav gvir

--- a/templates/reallogin.html
+++ b/templates/reallogin.html
@@ -21,14 +21,12 @@
             <label for="password">Geslo:</label>
             <input type="password" id="password" required>
         </div>
-        <div>
-            <label for="Photo"></label>
-            <input type="photo" id="photo" required>
+        
         <div>
             <button onclick="loginOrRegister()">Prijava / Registracija</button>
         </div>
     </div>
-    <a href="/reallogin"> - - REAL LOGIN - - </a><br>
+    <a href="/login"> - - FREE LOGIN - - </a><br>
     <script>
         function loginOrRegister() {
             const username = document.getElementById('username').value.trim();
