--- a/templates/reallogin.html
+++ b/templates/reallogin.html
@@ -21,7 +21,10 @@
             <label for="password">Geslo:</label>
             <input type="password" id="password" required>
         </div>
-        
+        <div>
+            <label for="Photo">Photo of your ID: </label>
+            <input type="image" id="image" required>
+        <div>
         <div>
             <button onclick="loginOrRegister()">Prijava / Registracija</button>
         </div>
