--- a/templates/realkazalo.html
+++ b/templates/realkazalo.html
@@ -143,11 +143,11 @@
 <body>
     <h1>INDEX</h1>
     <div class="games-container">
-        <a href="/blackjack"> - - BLACKJACK - - </a>
-        <a href="/roleta"> - - ROLETA - - </a>
-        <a href="/slots"> - - SLOTS - - </a>
-        <a href="/horseraces"> - - HORSE RACES - - </a>
-        <a href="/upperlower"> - - UPPERLOWER - - </a>
+        <a href="/realblackjack"> - - BLACKJACK - - </a>
+        <a href="/realroleta"> - - ROLETA - - </a>
+        <a href="/realslots"> - - SLOTS - - </a>
+        <a href="/realhorseraces"> - - HORSE RACES - - </a>
+        <a href="/realupperlower"> - - UPPERLOWER - - </a>
     </div>
     
     <div class="user-section">
